--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,14 @@
 .cover {
-    background: 
-        url('../public/wallpaper-art.png'), /* Imagen del patrón repetida */
-        linear-gradient(to bottom, #00008B, #000); /* Fondo degradado */
-    background-size: cover; /* Ajusta el tamaño del patrón y del degradado */
-    min-height: 100vh; /* Asegura que ocupe toda la altura del viewport */
-    width: 100%; /* Asegura que ocupe todo el ancho */
+    display: flex;
+    flex-direction: column; /* Layout vertical */
+    background:
+        url('/wallpaper-art.png'),
+        linear-gradient(to bottom, #00008B, #000);
+    background-size: cover;
+    width: 100%;
+    min-height: 100vh;
     max-height: auto;
 }
 
-.main-container {
-    height: 600px;
-}
+
+
