--- a/src/components/Footer/FooterComponent.css
+++ b/src/components/Footer/FooterComponent.css
@@ -14,3 +14,30 @@
    transform: scale(1.1);
    transition: transform 0.2s ease;
 }
+
+@media(width > 900px) {
+  .footer-class {
+    width: 100%;
+  }
+
+  .footer2 {
+    width: 100%;
+  }
+
+  .footer3 {
+    width: 100%;
+  }
+
+  .footer4 {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .footer5 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
