--- a/src/components/Quote/QuoteComponent.css
+++ b/src/components/Quote/QuoteComponent.css
@@ -13,3 +13,9 @@
     background-color: #002bb9;
     transform: scale(1.1);
 }
+
+@media(width > 900px) {
+    .quote-square {
+        height: 50vh;
+    }
+}
