--- a/src/components/Catalog/CatalogComponent.css
+++ b/src/components/Catalog/CatalogComponent.css
@@ -10,7 +10,7 @@
 
 .h2 {
   font-family: 'Bebas Neue', sans-serif;
-  font-size: 2.5rem;
+  font-size: 8.5rem;
   color: #001969;
   text-align: center;
   margin-bottom: 2rem;
@@ -133,4 +133,20 @@
 
 .close-button:hover {
   background: #3346c3;
+}
+
+
+@media (max-width: 500px) {
+  .keys-grid {
+    grid-template-columns: 1fr; /* Una sola columna */
+    gap: 1rem; /* Opcional: ajusta el espacio entre las tarjetas */
+  }
+
+  .key-card {
+    margin: auto; /* Centra las tarjetas */
+  }
+
+  .h2 {
+    font-size: 10rem;
+  }
 }
