quote button fixed

--- a/src/components/Quote/QuoteComponent.css
+++ b/src/components/Quote/QuoteComponent.css
@@ -1,21 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Comfortaa:wght@300..700&family=Edu+AU+VIC+WA+NT+Arrows:wght@400..700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Comfortaa:wght@300..700&family=Edu+AU+VIC+WA+NT+Arrows:wght@400..700&display=swap");
 
 .text-custom {
-    color: #001969;
-    font-family: "Comfortaa", sans-serif;
+  color: #001969;
+  font-family: "Comfortaa", sans-serif;
 }
 
 .button-custom {
-    background-color: #001969;
+  background-color: #001969;
 }
 
 .button-custom:hover {
-    background-color: #002bb9;
-    transform: scale(1.1);
+  background-color: #002bb9;
+  transform: scale(1.1);
 }
 
-@media(width > 900px) {
-    .quote-square {
-        height: 40vh;
-    }
+@media (width > 900px) {
+  .quote-square {
+    display: flex;
+    align-items: center;
+  }
 }
