--- a/src/components/Quote/QuoteComponent.css
+++ b/src/components/Quote/QuoteComponent.css
@@ -14,9 +14,45 @@
   transform: scale(1.1);
 }
 
+.allcards {
+  display: flex;
+  flex-direction: column;
+  margin: 50px;
+  justify-content: space-around;
+  align-items: center;
+
+  h1 {
+    font-size: 25px;
+    margin-bottom: 20px;
+    font-weight: 700;
+  }
+
+  img {
+    max-width: 50vw;
+    max-height: 30vh;
+    margin: 10px;
+  }
+}
+
 @media (width > 900px) {
   .quote-square {
     display: flex;
     align-items: center;
+  }
+
+  .allcards {
+    display: flex;
+    flex-direction: column;
+    margin: 50px;
+    align-items: center;
+
+    .photoinside {
+      display: flex;
+      justify-content: space-around;
+    }
+
+    img {
+      margin: 10px;
+    }
   }
 }
